--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
 
 
                 <Spinner
+                    android:id="@+id/team_a_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/team_names"
@@ -115,6 +116,7 @@
                 android:orientation="vertical">
 
                 <Spinner
+                    android:id="@+id/team_b_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:entries="@array/team_names"
